<resources>
    <!-- App's name -->
    <string name="app_name">Swim Manager</string>

    <!-- Menu options -->
    <string name="action_settings">Settings</string>

    <!-- Categories name of the UserEditorCategory -->
    <string name="category_overview">Info</string>
    <string name="category_gender">Gender</string>
    <string name="category_birthday">Birthday</string>
    <string name="category_level">Level</string>

    <!-- Hints for the fields inside the UserEditorCategory -->
    <string name="hint_swimmer_name">Name</string>
    <string name="hint_swimmer_surname">Surname</string>

    <!-- Empty swimmer list view -->
    <string name="empty_swimmer_list_msg">There aren\'t users yet</string>

    <!-- Genders -->
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <!-- Levels -->
    <string name="level_unknown">Unknown</string>
    <string name="level_one">1st Level</string>
    <string name="level_two">2nd Level</string>
    <string name="level_three">3rd Level</string>
    <string name="level_four">4th Level</string>

    <!-- Menu options -->
    <string name="action_save_swimmer">Save</string>
    <string name="action_delete_swimmer">Delete</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- SwimEditorActivity's labels -->
    <string name="activity_edit_swimmer_label">Edit User</string>
    <string name="activity_add_swimmer_label">Add User</string>

    <!-- CourseEditorActivity's labels -->
    <string name="activity_edit_course_label">Edit Course</string>
    <string name="activity_add_course_label">Add Course</string>

    <!-- Toast messages -->
    <string name="swimmer_saved">User Saved</string>
    <string name="swimmer_not_saved">User NOT Saved</string>
    <string name="signed_in_msg">Signed in!</string>
    <string name="signed_in_canceled_msg">Signed in canceled</string>
    <string name="swimmer_updated">User Updated</string>
    <string name="swimmer_not_updated">User NOT Updated</string>

    <!-- Alert Dialog of SwimEditorActivity: Quit Activity -->
    <string name="discard_changes_dialog_msg">Discard your changes and quit the Editor?</string>
    <string name="discard_dialog">Discard</string>
    <string name="keep_editig_dialog">Keep Editing</string>

    <!-- Alert Dialog of SwimEditorActivity: Delete Swimmer -->
    <string name="delete_swimmer_dialog_msg">Delete the swimmer?</string>
    <string name="delete_dialog">Delete</string>
    <string name="cancel_dialog">Cancel</string>

    <!-- Titles of pages -->
    <string name="page_swimmer">Swimmers</string>
    <string name="page_courses">Courses</string>

    <!-- Errors -->
    <string name="name_error_msg">You have to enter a Name</string>
    <string name="date_error_msg">Invalid Date</string>
    <string name="surname_error_msg">You have to enter a Surname</string>

    <!-- Empty swimmer list view -->
    <string name="empty_course_list_msg">There aren\'t courses yet</string>

    <!-- Course Adapter -->
    <string name="course_text_trainer">Trainer</string>
    <string name="text_course_lesson">Lessons</string>
    <string name="text_course_swimmer">Swimmer</string>
    <string name="course_name">Course Name</string>
    <string name="hint_trainer">Name Surname</string>
    <string name="text_number_of_swimmers">Number of Swimmers</string>
    <string name="button_select_swimmers">Select Swimmers</string>
    <string name="label_select_swimmer_course">New Course</string>
    <string name="action_bar_subtitle_select_swimmer">Select swimmers</string>
    <string name="toast_select_at_leat_one_swimmer_msg">At least 1 swimmwer must be selected</string>
    <string name="category_starting_date">Starting Date</string>
    <string name="category_end_date">End Date</string>
    <string name="title_activity_swimmer_info">SwimmerInfoActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_prova">Prova</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_pdfreader">PDFReader</string>

</resources>
