<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editoractivity.CourseEditorActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <!-- Category Course Name -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name"
                    android:layout_weight="1"
                    style="@style/CategoryStyle" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_course_name_error"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_course_name"
                        android:hint="@string/course_name"
                        android:inputType="textCapWords"
                        style="@style/EditorFieldStyle" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <!-- Category Trainer -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name"
                    android:layout_weight="1"
                    style="@style/CategoryStyle" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_trainer_error"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <!-- Trainer field -->
                    <EditText
                        android:id="@+id/edit_trainer"
                        android:hint="@string/hint_trainer"
                        android:inputType="textCapWords"
                        style="@style/EditorFieldStyle" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_number_of_swimmers"
                    style="@style/CategoryStyle" />
                <TextView
                    android:id="@+id/number_of_swimmers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="24"/>
            </LinearLayout>
            <Button
                android:layout_margin="16dp"
                android:id="@+id/button_select_swimmers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_select_swimmers"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

